--- a/README.Rmd
+++ b/README.Rmd
@@ -37,6 +37,13 @@ devtools::install_github("ropenscilabs/defender")
 
 You can check for system calls in any directory locally available:
 
-```{r example}
+```{r system-calls-example}
 defender::summarize_system_calls("../testevil")
 ```
+
+You can check the NAMESPACE file in a package for dangerous imports:
+
+```{r namespace-example}
+defender::check_namespace("../testevil", c("processx", "sys", "processx::run"))
+```
+
