--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# defender <img src="man/figures/logo.png" align="right" style="width: 128px;"/>
+# defender <img src="man/figures/logo.png" align="right"/>
 
 
 [![Travis build status](https://travis-ci.org/ropenscilabs/defender.svg?branch=master)](https://travis-ci.org/ropenscilabs/defender)
