attempt to fix image in readme

--- a/README.Rmd
+++ b/README.Rmd
@@ -5,7 +5,7 @@ output: github_document
 
 # rOpenSci Unconf 18 Project : defender
 
-# <img src="man/figures/supergb.png" align="right"/>
+<img src="man/figures/supergb.png" style="width: 50%; height: 50%"/>
 
 ## Authors:
 
